# vatbrain

./: .gitignore  AGENTS.md
docs/: INDEX.md
docs/3rds/: INDEX.md
docs/3rds/volengine/: INDEX.md  embeding.md  file_api.md  function_calling.md  image_generation.md  image_understanding.md  reasoning.md  response_api.md  streaming.md  structured_output.md  text_generation.md  video_generation.md  video_understanding.md
docs/design/: draft.CN.md  high-level-design.CN.md  provider-capability-integration.CN.md  provider-native-replay.CN.md
docs/impls/python/: STATUS.md  evolution-plan.CN.md  openai-adapter.CN.md  pydantic-structured-output.CN.md  v0.2-responses-contract-hardening.CN.md  v0.3-core-api-family-expansion.CN.md
docs/user/python/: STATUS.md  api-reference.CN.md  pydantic-structured-output.CN.md  quickstart.CN.md
python/: pyproject.toml
python/tests/unit/: test_capabilities.py  test_embeddings.py  test_generation.py  test_items.py  test_media.py  test_openai_client.py  test_openai_embeddings.py  test_openai_generation_mapper.py  test_openai_stream_mapper.py  test_pydantic_structured_output.py  test_resources.py  test_tools.py
python/whero/: __init__.py
python/whero/vatbrain/: __init__.py  structured.py
python/whero/vatbrain/core/: __init__.py  capabilities.py  client.py  embeddings.py  errors.py  generation.py  items.py  media.py  resources.py  tools.py  usage.py
python/whero/vatbrain/providers/: __init__.py
python/whero/vatbrain/providers/openai/: __init__.py  capabilities.py  client.py  mapper.py  stream.py
