[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "whero-vatbrain"
version = "0.1.0"
description = "Provider-neutral LLM inference abstraction layer."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["whero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
